--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,26 +1,42 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
+# Build and test the project for Windows, MacOS, Android, and iOS.
+# Workflow file written by ChatGPT.
 
-name: .NET
+name: Build and Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
-  build:
+  build-and-test:
+    runs-on: ubuntu-latest
 
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+
     - name: Setup .NET
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 7.0.x
-    - name: Install MAUI workload
-      run: dotnet workload install maui
-    - name: Build
-      run: dotnet build -c Release -f:net7.0-android
+        dotnet-version: '7.0.x'
+        include-prerelease: true
+
+    - name: Install dependencies
+      run: dotnet restore
+
+    - name: Build and test for Android
+      if: matrix.os == 'macos-latest'
+      run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
+
+    - name: Build and test for iOS
+      if: matrix.os == 'macos-latest'
+      run: dotnet build --configuration Release --framework net7.0-ios && dotnet test --no-build --configuration Release --framework net7.0-ios
+
+    - name: Build and test for Windows
+      if: matrix.os == 'windows-latest'
+      run: dotnet build --configuration Release --framework net6.0-windows && dotnet test --no-build --configuration Release --framework net6.0-windows
