--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,9 @@ jobs:
         include-prerelease: true
 
     - name: Install dependencies
-      run: dotnet restore
+      run: |
+        dotnet workload install maui-android
+        dotnet restore
 
     - name: Build and test for Android
       if: matrix.os == 'macos-latest'
