--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,9 +26,13 @@ jobs:
         dotnet-version: '7.0.x'
         include-prerelease: true
 
+    # Install .NET MAUI for Android ...
+    # Install iOS framework tools ...
+    # Perform dotnet restore ...
     - name: Install dependencies
       run: |
         dotnet workload install maui-android
+        dotnet workload install ios
         dotnet restore
 
     - name: Build and test for Android
