--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,11 +21,13 @@ jobs:
 
     # Install .NET MAUI for Android ...
     # Install iOS framework tools ...
+    # Install maccatalyst tools for building and testing for macOS ...
     # Perform dotnet restore ...
     - name: Install dependencies
       run: |
         dotnet workload install maui-android
         dotnet workload install ios
+        dotnet workload install maccatalyst
         dotnet restore
     - name: Build and test for Android
       run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
