--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-# Build and test code for Android, iOS, and Windows.
+# Build and test code for Android and Windows.
 # Workfile written using ChatGPT.
 name: Build and Test
 
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -22,20 +22,13 @@ jobs:
         include-prerelease: true
 
     # Install .NET MAUI for Android ...
-    # Install iOS framework tools ...
-    # Install maccatalyst tools for building and testing for macOS ...
     # Perform dotnet restore ...
     - name: Install dependencies
       run: |
         dotnet workload install maui-android
-        dotnet workload install ios
-        dotnet workload install maccatalyst
         dotnet restore
     - name: Build and test for Android
       run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
-
-    - name: Build and test for iOS
-      run: dotnet build --configuration Release /p:PublishTrimmed=true /p:MtouchLink=None --framework net7.0-ios && dotnet test --no-build --configuration Release --framework net7.0-ios
 
     - name: Build and test for Windows
       run: dotnet build --configuration Release --framework net6.0-windows && dotnet test --no-build --configuration Release --framework net6.0-windows
