--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         dotnet workload install maui-android
+        dotnet workload install Microsoft.ios.Sdk.net7
         dotnet restore
     - name: Build and test for Android
       run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
