--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -26,7 +26,6 @@ jobs:
     - name: Install dependencies
       run: |
         dotnet workload install maui-android
-        dotnet workload install Microsoft.ios.Sdk.net7
         dotnet restore
     - name: Build and test for Android
       run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
