--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,5 @@
-# Build and test the project for Windows, MacOS, Android, and iOS.
-# Workflow file written by ChatGPT.
-
+# Build and test code for Android and Windows.
+# Workfile written using ChatGPT.
 name: Build and Test
 
 on:
@@ -11,32 +10,25 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        os: [macos-latest, windows-latest]
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '7.0.x'
         include-prerelease: true
 
+    # Install .NET MAUI for Android ...
+    # Perform dotnet restore ...
     - name: Install dependencies
-      run: dotnet restore
-
+      run: |
+        dotnet workload install maui-android
+        dotnet restore
     - name: Build and test for Android
-      if: matrix.os == 'macos-latest'
       run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
 
-    - name: Build and test for iOS
-      if: matrix.os == 'macos-latest'
-      run: dotnet build --configuration Release --framework net7.0-ios && dotnet test --no-build --configuration Release --framework net7.0-ios
-
     - name: Build and test for Windows
-      if: matrix.os == 'windows-latest'
       run: dotnet build --configuration Release --framework net6.0-windows && dotnet test --no-build --configuration Release --framework net6.0-windows
