--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,10 +22,12 @@ jobs:
         include-prerelease: true
 
     # Install .NET MAUI for Android ...
+    # Install macOS tools ...
     # Perform dotnet restore ...
     - name: Install dependencies
       run: |
         dotnet workload install maui-android
+        dotnet workload install maccatalyst
         dotnet restore
     - name: Build and test for Android
       run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
