--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,42 +1,19 @@
-# Build and test the project for Windows, MacOS, Android, and iOS.
-# Workflow file written by ChatGPT.
-
-name: Build and Test
+name: CI Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
+    paths-ignore:
+      - '**/*.md'
+      - '**/*.gitignore'
+      - '**/*.gitattributes'
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
+  workflow_dispatch:
+permissions:
+  contents: read
 
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        os: [macos-latest, windows-latest]
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '7.0.x'
-        include-prerelease: true
-
-    - name: Install dependencies
-      run: dotnet restore
-
-    - name: Build and test for Android
-      if: matrix.os == 'macos-latest'
-      run: dotnet build --configuration Release --framework net7.0-android && dotnet test --no-build --configuration Release --framework net7.0-android
-
-    - name: Build and test for iOS
-      if: matrix.os == 'macos-latest'
-      run: dotnet build --configuration Release --framework net7.0-ios && dotnet test --no-build --configuration Release --framework net7.0-ios
-
-    - name: Build and test for Windows
-      if: matrix.os == 'windows-latest'
-      run: dotnet build --configuration Release --framework net6.0-windows && dotnet test --no-build --configuration Release --framework net6.0-windows
+env:
+  DOTNET_NOLOGO: true                     # Disable the .NET logo
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true # Disable the .NET first time experience
+  DOTNET_CLI_TELEMETRY_OPTOUT: true       # Disable sending .NET CLI telemetry
