--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,9 @@ jobs:
         dotnet-version: 7.0.x
 
     - name: Install MAUI workload
-      run: dotnet workload install maui-android
+      run: |
+        dotnet workload install maui-android
+        dotnet workload install maccatalyst
         
     - name: Restore dependencies
       run: dotnet restore
