--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install MAUI workload
       run: |
         dotnet workload install maui-android
-        dotnet workload install maccatalyst
+        dotnet workload install maui-maccatalyst
         
     - name: Restore dependencies
       run: dotnet restore
