--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,6 +39,7 @@ jobs:
       run: |
         dotnet workload install maui-android
         dotnet workload install maui-maccatalyst
+        dotnet workload install ios
         
     - name: Restore dependencies
       run: dotnet restore
