--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,12 +37,13 @@ jobs:
 
     - name: Install MAUI workload
       run: |
-        dotnet workload install maui-android
-        dotnet workload install maui-maccatalyst
-        dotnet workload install ios
+        dotnet workload install maui-android --ignore-failed-sources
+
+    - name: Restore Dependencies
+      run: dotnet restore
       
     - name: Build
-      run: dotnet build --configuration Release
+      run: dotnet build --no-restore --configuration Release
       
     - name: Test
       run: dotnet test --no-build --verbosity normal
@@ -64,7 +65,10 @@ jobs:
 
       - name: Install MAUI Workloads
         run: |
-          dotnet workload install maui
+          dotnet workload install maui --ignore-failed-sources
+          
+      - name: Restore Dependencies
+        run: dotnet restore          
 
       - name: Build
         run: dotnet build --configuration Release
@@ -90,6 +94,9 @@ jobs:
         run: |
           dotnet workload install maccatalyst --ignore-failed-sources
           dotnet workload install maui --ignore-failed-sources
+          
+      - name: Restore Dependencies
+        run: dotnet restore          
 
       - name: Build MAUI MacCatalyst
         run: dotnet build --configuration Release
