--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,6 +38,7 @@ jobs:
     - name: Install MAUI workload
       run: |
         dotnet workload install maui-android --ignore-failed-sources
+        dotnet workload install maccatalyst --ignore-failed-sources
 
     - name: Restore Dependencies
       run: dotnet restore
