--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,7 @@ jobs:
       run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj
       
     - name: Build Project
-      run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-android --no-restore
+      run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0 --no-restore
       
     - name: Upload Android Artifact
       uses: actions/upload-artifact@v3.1.0
@@ -68,67 +68,11 @@ jobs:
         run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj
 
       - name: Build MAUI Windows
-        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.19041.0 --no-restore
+        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.22621.0 --no-restore
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v3.1.0
         with:
           name: mauibeach-windows-ci-build
           path: TournamentOrganizer/bin/Release/net7.0-windows10.0.19041.0/win10-x64/AppPackages/TournamentOrganizer*/TournamentOrganizer*.msix
-
-  # Build the application for an iOS environment
-  build-ios:
-    runs-on: macos-12
-    name: iOS Build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup .NET 7
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: 7.0.x
-
-      - name: Install MAUI Workload
-        run: dotnet workload install maui --ignore-failed-sources
-
-      - name: Restore Dependencies
-        run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj
-
-      - name: Build MAUI iOS
-        run: dotnet build TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-ios --no-restore /p:buildForSimulator=True /p:packageApp=True /p:ArchiveOnBuild=False
-
-      - name: Upload iOS Artifact
-        uses: actions/upload-artifact@v3.1.0
-        with:
-          name: mauibeach-ios-ci-build
-          path: TournamentOrganizer/bin/Release/net6.0-ios/iossimulator-x64/**/*.app
-
-# MAUI MacCatalyst Build
-  build-mac:
-    runs-on: macos-12
-    name: MacCatalyst Build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup .NET 7
-        uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: 7.0.x
-
-      - name: Install MAUI Workload
-        run: dotnet workload install maui --ignore-failed-sources
-
-      - name: Restore Dependencies
-        run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj
-
-      - name: Build MAUI MacCatalyst
-        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net6.0-maccatalyst --no-restore -p:BuildIpa=True
-
-      - name: Upload MacCatalyst Artifact
-        uses: actions/upload-artifact@v3.1.0
-        with:
-          name: mauibeach-macos-ci-build
-          path: TournamentOrganizer/bin/Release/net7.0-maccatalyst/maccatalyst-x64/publish/*.pkg
 
