Added the ability to customize the names of Enum values and then retrieve those customized names. This was done to allow me to retrieve"Round Robin" instead of "RoundRobin" from the TournamentType names, and do the same anytime that comes up in the future.
Also, moved the additional pages to the base namespace.

--- a/TournamentOrganizer/TournamentOrganizer.csproj
+++ b/TournamentOrganizer/TournamentOrganizer.csproj
@@ -113,10 +113,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Views\AddParticipantsPage.xaml">
+	  <MauiXaml Update="AddParticipantsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Views\TournamentPage.xaml">
+	  <MauiXaml Update="TournamentPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
