FINALLY got object passing working between pages. Was successfully able to pass a Tournament object from the Main Page to the Participants Page.

--- a/TournamentOrganizer/TournamentOrganizer.csproj
+++ b/TournamentOrganizer/TournamentOrganizer.csproj
@@ -108,12 +108,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="AddParticipantsPage.xaml">
+	  <Compile Update="ParticipantsPage.xaml.cs">
+	    <DependentUpon>ParticipantsPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="ParticipantsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="TournamentPage.xaml">
