--- a/TournamentOrganizer/Platforms/Android/AndroidManifest.xml
+++ b/TournamentOrganizer/Platforms/Android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.loganmj.tournamentOrganizer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.loganmj.tournamentOrganizer" android:versionCode="1" android:versionName="Pre-Alpha 1.0">
 	<application android:allowBackup="true" android:supportsRtl="true" android:label="TournamentOrganizer" android:icon="@mipmap/tournament_organizer_icon"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
