--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -71,7 +71,7 @@ jobs:
         env:
           KEYSTORE_PASSWORD: ${{ secrets.ANDROIDSIGNINGSTOREPASSWORD }}
           KEY_PASSWORD: ${{ secrets.ANDROIDSIGNINGKEYPASSWORD }}
-        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.22621.0 --no-restore /p:AndroidSigningKeyPass=KEY_PASSWORD /p:AndroidSigningStorePass=KEYSTORE_PASSWORD
+        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.22621.0 --no-restore /p:AndroidSigningKeyPass=$KEY_PASSWORD /p:AndroidSigningStorePass=$KEYSTORE_PASSWORD
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v3.1.0
