--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -68,10 +68,17 @@ jobs:
         run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj /p:PublishReadyToRun=true
 
       - name: Build MAUI Windows
-        env:
-          KEYSTORE_PASSWORD: ${{ secrets.ANDROIDSIGNINGSTOREPASSWORD }}
-          KEY_PASSWORD: ${{ secrets.ANDROIDSIGNINGKEYPASSWORD }}
         run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.22621.0 --no-restore /p:AndroidSigningKeyPass=$KEY_PASSWORD /p:AndroidSigningStorePass=$KEYSTORE_PASSWORD
+
+      - name: Sign APK with secret
+        env:
+          KEYSTORE: ${{ secrets.KEYSTORE }}
+          KEYSTORE_PASSWORD: ${{ secrets.ANDROIDSIGNINGSTOREPASS }}
+          KEY_PASSWORD: ${{ secrets.ANDROIDSIGNINGKEYPASS }}
+        run: |
+          echo $KEYSTORE | base64 --decode > keystore.jks
+          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.jks -storepass $ANDROIDSIGNINGSTOREPASS -keypass $ANDROIDSIGNINGKEYPASS app/build/outputs/apk/release/app-release-unsigned.apk alias_name
+          zipalign -v 4 app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/app-release-signed.apk
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v3.1.0
