--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,5 +1,5 @@
 # Define when the workflow is run
-name: CI Build
+name: B
 on:
   push:
     branches: [ main ]
@@ -28,7 +28,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
     
-    - name: Setup .NET 7
+    - name: Setup .NET
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: 7.0.x
@@ -38,9 +38,24 @@ jobs:
 
     - name: Restore Dependencies
       run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj /p:PublishReadyToRun=true
+
+    - name: Setup Keystore File
+      run: |
+        echo "${{ secrets.KEYSTORE_FILE }}" > myapp.keystore.asc
+        gpg -d --passphrase "${{ secrets.KEYSTORE_PASSWORD_GPG }}" --batch myapp.keystore.asc > myapp.keystore
       
     - name: Build Project
-      run: dotnet build TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-android33.0 --no-restore
+      run: dotnet build TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-android33.0 /p:AndroidSigningKeyStore=myapp.keystore /p:AndroidSigningKeyAlias=com.loganmj.TournamentOrganizer /p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_PASSWORD }}" --no-restore
+
+    - name: Sign APK with secret
+      env:
+        KEYSTORE: ${{ secrets.KEYSTORE }}
+        KEYSTORE_PASSWORD: ${{ secrets.ANDROIDSIGNINGSTOREPASS }}
+        KEY_PASSWORD: ${{ secrets.ANDROIDSIGNINGKEYPASS }}
+      run: |
+        echo $KEYSTORE | base64 --decode > keystore.jks
+        jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.jks -storepass $ANDROIDSIGNINGSTOREPASS -keypass $ANDROIDSIGNINGKEYPASS app/build/outputs/apk/release/app-release-unsigned.apk alias_name
+        zipalign -v 4 app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/app-release-signed.apk
       
     - name: Upload Android Artifact
       uses: actions/upload-artifact@v3.1.0
@@ -68,17 +83,7 @@ jobs:
         run: dotnet restore TournamentOrganizer/TournamentOrganizer.csproj /p:PublishReadyToRun=true
 
       - name: Build MAUI Windows
-        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.22621.0 --no-restore /p:AndroidSigningKeyPass=$KEY_PASSWORD /p:AndroidSigningStorePass=$KEYSTORE_PASSWORD
-
-      - name: Sign APK with secret
-        env:
-          KEYSTORE: ${{ secrets.KEYSTORE }}
-          KEYSTORE_PASSWORD: ${{ secrets.ANDROIDSIGNINGSTOREPASS }}
-          KEY_PASSWORD: ${{ secrets.ANDROIDSIGNINGKEYPASS }}
-        run: |
-          echo $KEYSTORE | base64 --decode > keystore.jks
-          jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.jks -storepass $ANDROIDSIGNINGSTOREPASS -keypass $ANDROIDSIGNINGKEYPASS app/build/outputs/apk/release/app-release-unsigned.apk alias_name
-          zipalign -v 4 app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/app-release-signed.apk
+        run: dotnet publish TournamentOrganizer/TournamentOrganizer.csproj -c Release -f net7.0-windows10.0.22621.0 --no-restore
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v3.1.0
